2007-08-14  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin.
        
        Add test for <rdar://problem/5143183>
        Air Mail postmark shows up wrong in Firefox due to use of CSS background-position-x/y
        
        Also update a few tests to expect background-position instead of background-position-x/y

        * fast/css/background-position-serialize-expected.txt: Added.
        * fast/css/background-position-serialize.html: Added.
        * fast/css/computed-style-expected.txt:
        * fast/css/computed-style-without-renderer-expected.txt:
        * fast/css/remove-shorthand-expected.txt:

2007-08-13  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=14951
        REGRESSION: page interpreted as UTF-8 because of stray <?xml> after <head>

        * fast/encoding/misplaced-xml-declaration-expected.txt: Added.
        * fast/encoding/misplaced-xml-declaration.html: Added.

2007-08-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Kevin McCullough.

        Another attempt at getting these to pass reliably. 

        * http/tests/security/dataURL/xss-DENIED-to-data-url-in-foriegn-domain-subframe-location-change.html:
        * http/tests/security/dataURL/xss-DENIED-to-data-url-in-foriegn-domain-subframe.html:

2007-08-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Ensure that these tests don't fail intermittently.

        * http/tests/security/dataURL/resources/foreign-domain-data-url-accessor-opened-frame.html:
        * http/tests/security/dataURL/xss-DENIED-from-data-url-in-foriegn-domain-window-open-expected.txt:
        * http/tests/security/dataURL/xss-DENIED-to-data-url-in-foriegn-domain-subframe-location-change.html:
        * http/tests/security/dataURL/xss-DENIED-to-data-url-in-foriegn-domain-subframe.html:

2007-08-13  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        