@@ -1,0 +1,8 @@
+<script type="text/javascript" src="resources/testcode.js"></script>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+    runBackTest("resources/restore-form-state-https-1.html", 1, "");
+</script>
+This page just kicks off a test, and should not appear in the expected test output.
+The files in the resources dir have comments about the tests.
